# sphere-mvp-tg-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  NEXT_STEPS.md  PLAN.md  README.md  ROADMAP.md  main.py  progress.md  pyproject.toml  requirements.txt  subagents.md
.claude/: settings.json
.claude/skills/: deploy.md  migrate.md  review.md  test-staging.md  update-docs.md
.memory/: FORMAT.md  decisions.md  status.md
.memory/sessions/: 2026-02-24.md  2026-02-25.md  2026-02-26.md
adapters/: __init__.py
adapters/api/: __init__.py
adapters/telegram/: __init__.py  config.py  loader.py  middleware.py  outgoing_logger.py
adapters/whatsapp/: __init__.py
config/: features.py  settings.py
core/: __init__.py
core/domain/: __init__.py  activity_constants.py  constants.py  models.py
core/interfaces/: __init__.py  ai.py  conversation.py  messaging.py  repositories.py
core/prompts/: __init__.py  agent_chat_prompts.py  audio_onboarding.py  intent_onboarding.py  orchestrator_prompts.py  templates.py  vibe_check.py
core/services/: __init__.py  bingo_service.py  community_pulse_service.py  community_service.py  config_service.py  conversation_service.py  event_service.py  game_service.py  matching_service.py  observation_service.py  scheduler_service.py  story_service.py  user_service.py
core/utils/: __init__.py  language.py  personality_card.py  qr_generator.py
docs/: multi-platform-plan.md
docs/plans/: 2026-02-25-community-v1-design.md  2026-02-25-community-v1-implementation.md  2026-02-26-story-onboarding-design.md  2026-02-26-story-onboarding-plan.md
infrastructure/: __init__.py
infrastructure/ai/: __init__.py  claude_service.py  conversation_ai.py  embedding_service.py  event_parser_service.py  meetup_ai_service.py  openai_service.py  orchestrator_models.py  orchestrator_service.py  (+2 more)
locales/: __init__.py  en.py  ru.py
questions/: __init__.py  bank.py  categories.py
scripts/: auto_matching.py  backfill_embeddings.py  create_matches.py  event_matching_test.py  test_extraction.py  test_matching.py  test_onboarding_flow.py
supabase/: schema.sql  test_data.sql  update_test_profiles.sql
tests/: conftest.py  test_conversation_service.py  test_matching_service.py  test_models.py  test_user_service.py
(+63 files in other folders)
